feat : styling header - Stylisation de l'en-tête. - Ajout d'un changelog. - Ajout d'un readme permettant de visionner le site.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="dist/style/main.css">
+        <!-- Font-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet"> 
         <title>Ohmyfood! | Composez votre menu dans des restaurants d'exception !</title>
     </head>
     <body>
         <header>
-            <h1>ohmyfood</h1>
+            <h1><a href="#">ohmyfood</a></h1>
         </header>
 
         <section class="hero">
