feat: styling hero section Stylisation de la section "hero".

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
         <section class="hero">
             <div class="hero__location">
-                <p>Paris, Belleville</p>
+                <p><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-map-pin"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path><circle cx="12" cy="10" r="3"></circle></svg> Paris, Belleville</p>
             </div>
             <div class="cta">
                 <h2 class="cta__title">Réservez le menu qui vous convient</h2>
                 <h3 class="cta__subtitle">Découvrez des restaurants d'exception, sélectionnés par nos soins</h3>
-                <button type="button" class="cta__button">Explorer nos restaurants</button>
+                <button type="button" class="cta__button btn">Explorer nos restaurants</button>
             </div>
         </section>
 
@@ -31,7 +31,7 @@
             <ol>
                 <li>Choisissez un restaurant</li>
                 <li>Composez votre menu</li>
-                <li>Dégustez au restaurant</li>
+                <li><img src="https://img.icons8.com/external-itim2101-lineal-itim2101/64/000000/external-food-tray-food-delivery-itim2101-lineal-itim2101-3.png"/> Dégustez au restaurant</li>
             </ol>
         </section>
 
