feat: styling "fonctionnement" section Stylisation de la section "Fonctionnement".

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
         <section class="fonctionnement">
             <ol>
-                <li>Choisissez un restaurant</li>
-                <li>Composez votre menu</li>
-                <li><img src="https://img.icons8.com/external-itim2101-lineal-itim2101/64/000000/external-food-tray-food-delivery-itim2101-lineal-itim2101-3.png"/> Dégustez au restaurant</li>
+                <li class="fonctionnement__item"><img src="dist/images/icons/smartphone.svg" alt=""> Choisissez un restaurant</li>
+                <li class="fonctionnement__item"><img src="dist/images/icons/list.svg" alt=""> Composez votre menu</li>
+                <li class="fonctionnement__item"><img src="dist/images/icons/covered-food-tray-on-a-hand-of-hotel-room-service-svgrepo-com.svg"/> Dégustez au restaurant</li>
             </ol>
         </section>
 
