--- a/index.html
+++ b/index.html
@@ -38,39 +38,59 @@
         <main class="restaurants">
             <h2 class="restaurants__title">Restaurants</h2>
             <div class="restaurants__list">
-                <a href="#">
+                <a href="#" class="restaurants__item restaurants__item_new">
                     <figure>
-                        <img src="dist/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Alt text" width="150" height="150">
+                        <img src="dist/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Alt text" class="restaurant__img">
                         <figcaption>
-                            <h3 class="restautant__name">Restaurant name</h3>
-                            <p class="restaurants__location">Location</p>
+                            <div class="restaurants__label">
+                                <h3 class="restautant__name">La palette du goût</h3>
+                                <p class="restaurants__location">Ménilmontant</p>
+                            </div>
+                            <div class="restaurants__favourite">
+                                <p>❤</p>
+                            </div>
                         </figcaption>
                     </figure>
                 </a>
-                <a href="#">
+                <a href="#" class="restaurants__item restaurants__item_new">
                     <figure>
-                        <img src="dist/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Alt text" width="150" height="150">
+                        <img src="dist/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Alt text" class="restaurant__img">
                         <figcaption>
-                            <h3 class="restautant__name">Restaurant name</h3>
-                            <p class="restaurants__location">Location</p>
+                            <div class="restaurants__label">
+                                <h3 class="restautant__name">La note enchantée</h3>
+                                <p class="restaurants__location">Charonne</p>
+                            </div>
+                            <div class="restaurants__favourite">
+                                <p>❤</p>
+                            </div>
                         </figcaption>
                     </figure>
                 </a>
-                <a href="#">
+                <a href="#" class="restaurants__item">
                     <figure>
-                        <img src="dist/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Alt text" width="150" height="150">
+                        <img src="dist/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Alt text" class="restaurant__img">
                         <figcaption>
-                            <h3 class="restautant__name">Restaurant name</h3>
-                            <p class="restaurants__location">Location</p>
+                            <div class="restaurants__label">
+                                <h3 class="restautant__name">À la française</h3>
+                                <p class="restaurants__location">Cité Rouge</p>
+                            </div>
+                            <div class="restaurants__favourite">
+                                <p>❤</p>
+                            </div>
                         </figcaption>
                     </figure>
                 </a>
-                <a href="#">
+                <a href="#" class="restaurants__item">
                     <figure>
-                        <img src="dist/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Alt text" width="150" height="150">
+                        <img src="dist/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Alt text" class="restaurant__img">
                         <figcaption>
-                            <h3 class="restautant__name">Restaurant name</h3>
-                            <p class="restaurants__location">Location</p>
+                            <div class="restaurants__label">
+                                <h3 class="restautant__name">Le délice des sens</h3>
+                                <p class="restaurants__location">Folie-Méricourt</p>
+                            </div>
+                            <div class="restaurants__favourite">
+                                <p>❤</p>
+                            </div>
                         </figcaption>
                     </figure>
                 </a>
