feat: improve file structure and styling menu - Dossier "dist" renommé "public". - Création et compression des images en différentes tailles. - Modification du h1. - Modification de l'organisation des variables et de leurs noms. - Stylisation des pages de menu.

--- a/public/pages/menu-pages/le-delice-des-sens.html
+++ b/public/pages/menu-pages/le-delice-des-sens.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet"> 
-        <title>La palette du goût</title>
+        <title>Le délice des sens</title>
     </head>
     <body>
         <header>
@@ -20,65 +20,65 @@
 
         <main class="menu">
             <div class="menu__head">
-                <h1>La palette du goût</h1>
+                <h1>Le délice des sens</h1>
                 <span>❤</span>
             </div>
 
             <section class="entrees">
                 <div class="entrees__item">
-                    <h2 class="entrees__name">Fricassée d'escargot</h2>
-                    <p class="entrees__description">Au piment d'Espelette </p>
+                    <h2 class="entrees__name">Tartare de thon</h2>
+                    <p class="entrees__description">Assaisonné au yuzu</p>
                     <p class="entrees__prince">25€</p>
                 </div>
                 <div class="entrees__item">
-                    <h2 class="entrees__name">Foie gras de canard mi-cuit</h2>
-                    <p class="entrees__description">Et ses copeaux de truffe noire</p>
+                    <h2 class="entrees__name">Bouchée de homard croustillant </h2>
+                    <p class="entrees__description">Et sa farandole de petits légumes</p>
                     <p class="entrees__prince">35€</p>
                 </div>
                 <div class="entrees__item">
-                    <h2 class="entrees__name">Oeuf au plat</h2>
-                    <p class="entrees__description">Assaisonné à la truffe sur lit de caviar</p>
+                    <h2 class="entrees__name">Velouté de cèpes </h2>
+                    <p class="entrees__description">Aux truffes</p>
                     <p class="entrees__prince">20€</p>
                 </div>
             </section>
 
             <section class="plats">
                 <div class="plats__item">
-                    <h2 class="plats__name">Filet de boeuf aux herbes</h2>
-                    <p class="plats__description">Accompagné de sa ribambelle de légumes</p>
+                    <h2 class="plats__name">Poulet rôti aux herbes de Provence </h2>
+                    <p class="plats__description">Et sa crème de truffe</p>
                     <p class="plats__price">40€</p>
                 </div>
                 <div class="plats__item">
-                    <h2 class="plats__name">Parmentier de queue de boeuf</h2>
-                    <p class="plats__description">À la truffe noire sur sa purée de panais</p>
+                    <h2 class="plats__name">Langouste rôtie </h2>
+                    <p class="plats__description">Et ses légumes de saison</p>
                     <p class="plats__price">35€</p>
                 </div>
                 <div class="plats__item">
-                    <h2 class="plats__name">Filet de turbot</h2>
-                    <p class="plats__description">Aux agrumes</p>
+                    <h2 class="plats__name">Côte de boeuf Angus </h2>
+                    <p class="plats__description">Et sa purée de panais</p>
                     <p class="plats__price">44€</p>
                 </div>
             </section>
 
             <section class=desserts>
                 <div class="desserts__item">
-                    <h2 class="dessert__name">Paris-Brest</h2>
-                    <p class="dessert__description">Revisité</p>
+                    <h2 class="dessert__name">Farandole de desserts</h2>
+                    <p class="dessert__description">Du chef</p>
                     <p class="dessert__price">18€</p>
                 </div>
                 <div class="desserts__item">
-                    <h2 class="dessert__name">Macaron au chocolat d'exception </h2>
-                    <p class="dessert__description">Et glace à la vanille de Madagascar</p>
+                    <h2 class="dessert__name">Crème brulée </h2>
+                    <p class="dessert__description">Revisité</p>
                     <p class="dessert__price">22€</p>
                 </div>
                 <div class="desserts__item">
-                    <h2 class="dessert__name">Mousse au chocolat </h2>
-                    <p class="dessert__description">Au piment d'Espelette et à la truffe noire</p>
+                    <h2 class="dessert__name">Tiramisu </h2>
+                    <p class="dessert__description">À la noisette</p>
                     <p class="dessert__price">23€</p>
                 </div>
             </section>
 
-            <button>Commander</button>
+            <button class="btn">Commander</button>
         </main>
 
         <footer>
