--- a/public/pages/menu-pages/la-note-enchantee.html
+++ b/public/pages/menu-pages/la-note-enchantee.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet"> 
-        <title>Le délice des sens</title>
+        <title>La note enchantée</title>
     </head>
     <body>
         <header>
@@ -20,50 +20,55 @@
 
         <main class="menu">
             <div class="menu__head">
-                <h1>Le délice des sens</h1>
+                <h1>La note enchantée</h1>
                 <span>❤</span>
             </div>
 
             <section class="entrees">
                 <div class="entrees__item">
-                    <h2 class="entrees__name">Tartare de thon</h2>
-                    <p class="entrees__description">Assaisonné au yuzu</p>
+                    <h2 class="entrees__name">Ravioles de foie gras</h2>
+                    <p class="entrees__description">Accompagnés de leur crème à la truffe</p>
                     <p class="entrees__prince">25€</p>
                 </div>
                 <div class="entrees__item">
-                    <h2 class="entrees__name">Bouchée de homard croustillant </h2>
-                    <p class="entrees__description">Et sa farandole de petits légumes</p>
+                    <h2 class="entrees__name">Caviar osciètre</h2>
+                    <p class="entrees__description">Sur blini à la farine de blé noir</p>
                     <p class="entrees__prince">35€</p>
                 </div>
                 <div class="entrees__item">
-                    <h2 class="entrees__name">Velouté de cèpes </h2>
-                    <p class="entrees__description">Aux truffes</p>
+                    <h2 class="entrees__name">Homard et espuma de potiron</h2>
+                    <p class="entrees__description">Mariné aux zestes d'orange</p>
                     <p class="entrees__prince">20€</p>
+                </div>
+                <div class="entrees__item">
+                    <h2 class="entrees__name">Foie gras de canard cuit entier</h2>
+                    <p class="entrees__description">Confiture de figue et pain toasté</p>
+                    <p class="entrees__prince">35€</p>
                 </div>
             </section>
 
             <section class="plats">
                 <div class="plats__item">
-                    <h2 class="plats__name">Poulet rôti aux herbes de Provence </h2>
-                    <p class="plats__description">Et sa crème de truffe</p>
+                    <h2 class="plats__name">Noix de coquilles Saint-Jacques</h2>
+                    <p class="plats__description">Sur lit de purée de céleri-rave</p>
                     <p class="plats__price">40€</p>
                 </div>
                 <div class="plats__item">
-                    <h2 class="plats__name">Langouste rôtie </h2>
-                    <p class="plats__description">Et ses légumes de saison</p>
+                    <h2 class="plats__name">Langoustine poêlée</h2>
+                    <p class="plats__description">Purée de patate douce</p>
                     <p class="plats__price">35€</p>
                 </div>
                 <div class="plats__item">
-                    <h2 class="plats__name">Côte de boeuf Angus </h2>
-                    <p class="plats__description">Et sa purée de panais</p>
+                    <h2 class="plats__name">Mijoté de queue de boeuf </h2>
+                    <p class="plats__description">Et riz sauvage aux zestes de citron</p>
                     <p class="plats__price">44€</p>
                 </div>
             </section>
 
             <section class=desserts>
                 <div class="desserts__item">
-                    <h2 class="dessert__name">Farandole de desserts</h2>
-                    <p class="dessert__description">Du chef</p>
+                    <h2 class="dessert__name">Macaron noisette et chocolat</h2>
+                    <p class="dessert__description">Glace au caramel brun et sel de Guérande</p>
                     <p class="dessert__price">18€</p>
                 </div>
                 <div class="desserts__item">
@@ -72,13 +77,18 @@
                     <p class="dessert__price">22€</p>
                 </div>
                 <div class="desserts__item">
-                    <h2 class="dessert__name">Tiramisu </h2>
-                    <p class="dessert__description">À la noisette</p>
+                    <h2 class="dessert__name">Baba au rhum revisité </h2>
+                    <p class="dessert__description">Avec son coulis de citron</p>
+                    <p class="dessert__price">22€</p>
+                </div>
+                <div class="desserts__item">
+                    <h2 class="dessert__name">Tarte au citron meringuée </h2>
+                    <p class="dessert__description">Déstructurée</p>
                     <p class="dessert__price">23€</p>
                 </div>
             </section>
 
-            <button>Commander</button>
+            <button class="btn">Commander</button>
         </main>
 
         <footer>
