--- a/public/pages/menu-pages/la-palette-du-gout.html
+++ b/public/pages/menu-pages/la-palette-du-gout.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet"> 
-        <title>À la française</title>
+        <title>La palette du goût</title>
     </head>
     <body>
         <header>
@@ -20,65 +20,65 @@
 
         <main class="menu">
             <div class="menu__head">
-                <h1>À la française</h1>
+                <h1>La palette du goût</h1>
                 <span>❤</span>
             </div>
 
             <section class="entrees">
                 <div class="entrees__item">
-                    <h2 class="entrees__name">Tartare de poulpe acidulé</h2>
-                    <p class="entrees__description">Aux zestes d'orange</p>
+                    <h2 class="entrees__name">Fricassée d'escargot</h2>
+                    <p class="entrees__description">Au piment d'Espelette </p>
                     <p class="entrees__prince">25€</p>
                 </div>
                 <div class="entrees__item">
-                    <h2 class="entrees__name">Velouté de légumes d'antan</h2>
-                    <p class="entrees__description">Carotte, panais, topinambour</p>
+                    <h2 class="entrees__name">Foie gras de canard mi-cuit</h2>
+                    <p class="entrees__description">Et ses copeaux de truffe noire</p>
                     <p class="entrees__prince">35€</p>
                 </div>
                 <div class="entrees__item">
-                    <h2 class="entrees__name">Soupe à l'oignon</h2>
-                    <p class="entrees__description">Revisitée</p>
+                    <h2 class="entrees__name">Oeuf au plat</h2>
+                    <p class="entrees__description">Assaisonné à la truffe sur lit de caviar</p>
                     <p class="entrees__prince">20€</p>
                 </div>
             </section>
 
             <section class="plats">
                 <div class="plats__item">
-                    <h2 class="plats__name">Coquilles Saint-Jacques</h2>
-                    <p class="plats__description">Accompagnées d'une purée de panais</p>
+                    <h2 class="plats__name">Filet de boeuf aux herbes</h2>
+                    <p class="plats__description">Accompagné de sa ribambelle de légumes</p>
                     <p class="plats__price">40€</p>
                 </div>
                 <div class="plats__item">
-                    <h2 class="plats__name">Magret de canard</h2>
-                    <p class="plats__description">Et parmentier de pommes de terre</p>
+                    <h2 class="plats__name">Parmentier de queue de boeuf</h2>
+                    <p class="plats__description">À la truffe noire sur sa purée de panais</p>
                     <p class="plats__price">35€</p>
                 </div>
                 <div class="plats__item">
-                    <h2 class="plats__name">Pigeonneau d’Ille-et-Vilaine</h2>
-                    <p class="plats__description">Sur son lit de gnocchis aux légumes</p>
+                    <h2 class="plats__name">Filet de turbot</h2>
+                    <p class="plats__description">Aux agrumes</p>
                     <p class="plats__price">44€</p>
                 </div>
             </section>
 
             <section class=desserts>
                 <div class="desserts__item">
-                    <h2 class="dessert__name">Pétales de violettes glacés</h2>
-                    <p class="dessert__description">Et purée de noisettes</p>
+                    <h2 class="dessert__name">Paris-Brest</h2>
+                    <p class="dessert__description">Revisité</p>
                     <p class="dessert__price">18€</p>
                 </div>
                 <div class="desserts__item">
-                    <h2 class="dessert__name">Fondant au chocolat</h2>
-                    <p class="dessert__description">Revisité</p>
+                    <h2 class="dessert__name">Macaron au chocolat d'exception </h2>
+                    <p class="dessert__description">Et glace à la vanille de Madagascar</p>
                     <p class="dessert__price">22€</p>
                 </div>
                 <div class="desserts__item">
-                    <h2 class="dessert__name">Millefeuille croustillant</h2>
-                    <p class="dessert__description">Myrtilles et pâte d’amande</p>
+                    <h2 class="dessert__name">Mousse au chocolat </h2>
+                    <p class="dessert__description">Au piment d'Espelette et à la truffe noire</p>
                     <p class="dessert__price">23€</p>
                 </div>
             </section>
 
-            <button>Commander</button>
+            <button class="btn">Commander</button>
         </main>
 
         <footer>
