feat: heart animation with checkbox - Animation au clic du coeur avec un système de checkbox.

--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
                                 <h3 class="restautant__name">La palette du goût</h3>
                                 <p class="restaurants__location">Ménilmontant</p>
                             </div>
-                            <div class="restaurants__favourite">
-                                <i class="fa fa-heart-o" aria-hidden="true"></i>
-                            </div>
+                            <label class="restaurants__favourite">
+                                <input type="checkbox">
+                                <span class="heart"></span>
+                            </label>
                         </figcaption>
                     </figure>
                 </a>
@@ -77,9 +78,10 @@
                                 <h3 class="restautant__name">La note enchantée</h3>
                                 <p class="restaurants__location">Charonne</p>
                             </div>
-                            <div class="restaurants__favourite">
-                                <p>❤</p>
-                            </div>
+                            <label class="restaurants__favourite">
+                                <input type="checkbox">
+                                <span class="heart"></span>
+                            </label>
                         </figcaption>
                     </figure>
                 </a>
@@ -91,9 +93,10 @@
                                 <h3 class="restautant__name">À la française</h3>
                                 <p class="restaurants__location">Cité Rouge</p>
                             </div>
-                            <div class="restaurants__favourite">
-                                <p>❤</p>
-                            </div>
+                            <label class="restaurants__favourite">
+                                <input type="checkbox">
+                                <span class="heart"></span>
+                            </label>
                         </figcaption>
                     </figure>
                 </a>
@@ -105,9 +108,10 @@
                                 <h3 class="restautant__name">Le délice des sens</h3>
                                 <p class="restaurants__location">Folie-Méricourt</p>
                             </div>
-                            <div class="restaurants__favourite">
-                                <p>❤</p>
-                            </div>
+                            <label class="restaurants__favourite">
+                                <input type="checkbox">
+                                <span class="heart"></span>
+                            </label>
                         </figcaption>
                     </figure>
                 </a>
