feat: animations on menu pages - Ajout d'une animation au survol des items de menu sur la page du restaurant "À la française".

--- a/public/pages/menu-pages/a-la-francaise.html
+++ b/public/pages/menu-pages/a-la-francaise.html
@@ -8,7 +8,9 @@
         <!-- Font-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+        <!-- Font awesome icons -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>À la française</title>
     </head>
 
@@ -35,56 +37,101 @@
             </div>
 
             <section class="entrees">
-                <div class="entrees__item">
-                    <h2 class="entrees__name">Tartare de poulpe acidulé</h2>
-                    <p class="entrees__description">Aux zestes d'orange</p>
-                    <p class="entrees__prince">25€</p>
+                <div class="entrees__item menu__item">
+                    <div class="menu__text">
+                        <h2 class="entrees__name">Tartare de poulpe acidulé</h2>
+                        <p class="entrees__description">Aux zestes d'orange</p>
+                    </div>
+                    <div class="menu__selection">
+                        <p class="entrees__price">25€</p>
+                        <div class="entrees__check menu__check"></div>
+                    </div>
                 </div>
-                <div class="entrees__item">
-                    <h2 class="entrees__name">Velouté de légumes d'antan</h2>
-                    <p class="entrees__description">Carotte, panais, topinambour</p>
-                    <p class="entrees__prince">35€</p>
+                <div class="entrees__item menu__item">
+                    <div class="menu__text">
+                        <h2 class="entrees__name">Velouté de légumes d'antan</h2>
+                        <p class="entrees__description">Carotte, panais, topinambour</p>
+                    </div>
+                    <div class="menu__selection">
+                        <p class="entrees__price">35€</p>
+                        <div class="entrees__check menu__check"></div>
+                    </div>
                 </div>
-                <div class="entrees__item">
-                    <h2 class="entrees__name">Soupe à l'oignon</h2>
-                    <p class="entrees__description">Revisitée</p>
-                    <p class="entrees__prince">20€</p>
+                <div class="entrees__item menu__item">
+                    <div class="menu__text">
+                        <h2 class="entrees__name">Soupe à l'oignon</h2>
+                        <p class="entrees__description">Revisitée</p>
+                    </div>
+                    <div class="menu__selection">
+                        <p class="entrees__price">20€</p>
+                        <div class="entrees__check menu__check"></div>
+                    </div>
                 </div>
             </section>
 
             <section class="plats">
-                <div class="plats__item">
-                    <h2 class="plats__name">Coquilles Saint-Jacques</h2>
-                    <p class="plats__description">Accompagnées d'une purée de panais</p>
-                    <p class="plats__price">40€</p>
+                <div class="plats__item menu__item">
+                    <div class="menu__text">
+                        <h2 class="plats__name">Coquilles Saint-Jacques</h2>
+                        <p class="plats__description">Accompagnées d'une purée de panais</p>
+                    </div>
+                    <div class="menu__selection">
+                        <p class="plats__price">40€</p>
+                        <div class="plats__check menu__check"></div>
+                    </div>
                 </div>
-                <div class="plats__item">
-                    <h2 class="plats__name">Magret de canard</h2>
-                    <p class="plats__description">Et parmentier de pommes de terre</p>
-                    <p class="plats__price">35€</p>
+                <div class="plats__item menu__item">
+                    <div class="menu__text">
+                        <h2 class="plats__name">Magret de canard</h2>
+                        <p class="plats__description">Et parmentier de pommes de terre</p>
+                    </div>
+                    <div class="menu__selection">
+                        <p class="plats__price">35€</p>
+                        <div class="plats__check menu__check"></div>
+                    </div>
                 </div>
-                <div class="plats__item">
-                    <h2 class="plats__name">Pigeonneau d’Ille-et-Vilaine</h2>
-                    <p class="plats__description">Sur son lit de gnocchis aux légumes</p>
-                    <p class="plats__price">44€</p>
+                <div class="plats__item menu__item">
+                    <div class="menu__text">
+                        <h2 class="plats__name">Pigeonneau d’Ille-et-Vilaine</h2>
+                        <p class="plats__description">Sur son lit de gnocchis aux légumes</p>
+                    </div>
+                    <div class="menu__selection">
+                        <p class="plats__price">44€</p>
+                        <div class="plats__check menu__check"></div>
+                    </div>
                 </div>
             </section>
 
             <section class=desserts>
-                <div class="desserts__item">
-                    <h2 class="dessert__name">Pétales de violettes glacés</h2>
-                    <p class="dessert__description">Et purée de noisettes</p>
-                    <p class="dessert__price">18€</p>
+                <div class="desserts__item menu__item">
+                    <div class="desserts__text menu__text">
+                        <h2 class="desserts__name">Pétales de violettes glacés</h2>
+                        <p class="desserts__description">Et purée de noisettes</p>
+                    </div>
+                    <div class="desserts__selection menu__selection">
+                        <p class="desserts__price">18€</p>
+                        <div class="desserts__check menu__check"></div>
+                    </div>
                 </div>
-                <div class="desserts__item">
-                    <h2 class="dessert__name">Fondant au chocolat</h2>
-                    <p class="dessert__description">Revisité</p>
-                    <p class="dessert__price">22€</p>
+                <div class="desserts__item menu__item">
+                    <div class="desserts__text menu__text">
+                        <h2 class="desserts__name">Fondant au chocolat</h2>
+                        <p class="desserts__description">Revisité</p>
+                    </div>
+                    <div class="desserts__selection menu__selection">
+                        <p class="desserts__price">22€</p>
+                        <div class="desserts__check menu__check"></div>
+                    </div>
                 </div>
-                <div class="desserts__item">
-                    <h2 class="dessert__name">Millefeuille croustillant</h2>
-                    <p class="dessert__description">Myrtilles et pâte d’amande</p>
-                    <p class="dessert__price">23€</p>
+                <div class="desserts__item menu__item">
+                    <div class="desserts__text menu__text">
+                        <h2 class="desserts__name">Millefeuille croustillant</h2>
+                        <p class="desserts__description">Myrtilles et pâte d’amande</p>
+                    </div>
+                    <div class="desserts__selection menu__selection">
+                        <p class="desserts__price">23€</p>
+                        <div class="desserts__check menu__check"></div>
+                    </div>
                 </div>
             </section>
 
