feat: styling menu pages - Specific image banner on menu pages. - Titles on menu pages. - Menu item hover animations on every menu mages. - Heart animation on every menu page. - Return link icon on menu pages.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             </div>
                             <label class="restaurants__favourite">
                                 <input type="checkbox">
-                                <span class="heart"></span>
+                                <span class="heart restaurants__heart"></span>
                             </label>
                         </figcaption>
                     </figure>
@@ -80,7 +80,7 @@
                             </div>
                             <label class="restaurants__favourite">
                                 <input type="checkbox">
-                                <span class="heart"></span>
+                                <span class="heart restaurants__heart"></span>
                             </label>
                         </figcaption>
                     </figure>
@@ -95,7 +95,7 @@
                             </div>
                             <label class="restaurants__favourite">
                                 <input type="checkbox">
-                                <span class="heart"></span>
+                                <span class="heart restaurants__heart"></span>
                             </label>
                         </figcaption>
                     </figure>
@@ -110,7 +110,7 @@
                             </div>
                             <label class="restaurants__favourite">
                                 <input type="checkbox">
-                                <span class="heart"></span>
+                                <span class="heart restaurants__heart"></span>
                             </label>
                         </figcaption>
                     </figure>
