feat: loading spinner animation - Added loading screen animation - Added appearing menu item animation - Changed source images from "src" folder to "public" folder.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     </head>
 
     <body>
+        <!-- Loading spinner -->
+        <div class="loading-screen">
+            <div class="loading-spinner"></div>
+        </div>
+
+        
         <!-- Header -->
         <header>
             <svg class="logo" width="196" height="34" viewBox="0 0 196 34" fill="none" xmlns="http://www.w3.org/2000/svg">
