:art: improve styling - Adjusting paddings. - Fixing heart overlapping. - Same footer on every page. - Changed HTML of the buttons : from "button" to "anchor". - Added smooth scroll. - Added hover effect on restaurant selection. - Added hover effect on footer links.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="cta">
                 <h1 class="cta__title">Réservez le menu qui vous convient</h1>
                 <h2 class="cta__subtitle">Découvrez des restaurants d'exception, sélectionnés par nos soins</h2>
-                <button type="button" class="cta__button btn">Explorer nos restaurants</button>
+                <a class="cta__button btn" href="#restaurants">Explorer nos restaurants</a>
             </div>
         </section>
 
@@ -58,7 +58,7 @@
         </section>
 
         <!-- Restaurants section -->
-        <main class="restaurants">
+        <main class="restaurants" id="restaurants">
             <h2 class="restaurants__title">Restaurants</h2>
             <div class="restaurants__list">
                 <a href="public/pages/menu-pages/la-palette-du-gout.html" class="restaurants__item restaurants__item_new">
